# jm-api

./: .gitignore  Procfile  README.md  prompt.txt  pyproject.toml  requirements.txt  spec.txt
.claude/skills/code-gen/: SKILL.md
.claude/skills/make-pr-changes/: SKILL.md
.claude/skills/pipeline/: SKILL.md
.claude/skills/prompt-refine/: SKILL.md
.claude/skills/spec-qna/: SKILL.md
.claude/skills/test-gen/: SKILL.md
src/jm_api/: __init__.py  app.py  main.py
src/jm_api/api/: router.py
src/jm_api/api/generic/: __init__.py  filters.py  router.py
src/jm_api/api/routes/: bots.py  health.py
src/jm_api/core/: config.py  lifespan.py  logging.py
src/jm_api/db/: __init__.py  base.py  session.py
src/jm_api/middleware/: request_id.py
src/jm_api/models/: __init__.py  bot.py
src/jm_api/schemas/: bot.py  generic.py
src/jm_api/static/: app.js  create.html  edit.html  index.html  style.css  table.html
tests/: conftest.py  test_admin.py  test_admin_css_improvements.py  test_bots.py  test_config.py  test_create_bot.py  test_delete_bot.py  test_edit_page.py  test_edit_page_bug.py  test_edit_page_integration.py  test_filter_panel.py  test_generic_create_router.py  test_generic_delete_router.py  test_generic_filters.py  test_generic_router.py  test_generic_update_router.py  test_health.py  test_heroku_deployment.py  test_models.py  test_pr36_fixes.py  test_readme_env_vars.py  test_table_enhancements.py  test_update_bot.py  test_update_validation.py
tests/integration/: conftest.py  test_integration.py
