[project]
name = "jm-api"
version = "0.1.0"
description = "JM API service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "psycopg2-binary>=2.9",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.3",
]

[tool.pytest.ini_options]
markers = ["integration: full-stack integration tests (start real server)"]
addopts = "-q -m 'not integration'"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
